# ml

./: .gitignore  CHANGELOG.md  Cargo.toml  HANZO_INTEGRATION.md  LLM.md  Makefile  NOTICE  README.md
hanzo-3d/: Cargo.toml
hanzo-3d/src/: geometry.rs  io.rs  lib.rs  representations.rs
hanzo-3d/tests/: roundtrip.rs
hanzo-datasets/: Cargo.toml  README.md
hanzo-datasets/src/: batcher.rs  lib.rs
hanzo-flash-attn/: Cargo.toml  README.md  build.rs
hanzo-flash-attn-build/: Cargo.toml
hanzo-flash-attn-build/src/: lib.rs
hanzo-flash-attn-v3/: Cargo.toml  README.md  build.rs
hanzo-flash-attn-v3/hkernel/: cuda_compat.h
hanzo-flash-attn-v3/src/: cuda_impl.rs  lib.rs  stub.rs
hanzo-flash-attn-v3/tests/: flash_attn_tests.rs
hanzo-flash-attn/kernels/: flash_fwd_kernel.h  utils.h
hanzo-flash-attn/src/: lib.rs
hanzo-flash-attn/tests/: flash_attn_tests.rs
hanzo-kernel/: Cargo.toml  LICENSE  README.md
hanzo-kernel-macros/: Cargo.toml
hanzo-kernel-macros/src/: lib.rs
hanzo-kernel/examples/: hello_kernel.rs
hanzo-kernel/src/: attn.rs  dag.rs  dp4a_probe.rs  flash.rs  flash_metal_check.rs  fuse.rs  gdn.rs  island.rs  lib.rs  main.rs  mmq.rs  mmq_check.rs  norm.rs  place.rs  quant.rs  rope.rs  route.rs  tune.rs
hanzo-kernels/: Cargo.toml  README.md  build.rs
hanzo-kernels/src/: conv.cu  fattn_ds4.cu  ffi.rs  iquant_grids.cuh  iquant_mmvq.cu  lib.rs  mmvq_gguf.cu  quantized.cu  reduce.cu
hanzo-kernels/tools/: gen_iquant_grids.py
hanzo-metal-kernels/: Cargo.toml  README.md
hanzo-metal-kernels/examples/: metal_benchmarks.rs  q8_mm_bench.rs
hanzo-metal-kernels/src/: kernel.rs  lib.rs  source.rs  tests.rs
hanzo-metal-kernels/tmp/: affine.rs  cast.rs  unary.rs
hanzo-ml/: Cargo.toml  README.md  build.rs
hanzo-ml-book/: CONTRIBUTING.md  Cargo.toml  book.toml
hanzo-ml-book/src/: error_manage.md  lib.rs  simplified.rs  tracing.md
hanzo-ml-examples/: Cargo.toml  README.md  build.rs  buildtime_downloader.rs
hanzo-ml-examples/examples/: gguf-tokenizer.rs  onnx_basics.rs
hanzo-ml-examples/src/: audio.rs  chat_template.rs  imagenet.rs  lib.rs  token_output_stream.rs
hanzo-ml-inference/: Cargo.toml
hanzo-ml-inference/src/: distributed.rs  lib.rs  models.rs  pipeline.rs  quantization.rs
hanzo-ml-nn/: Cargo.toml  README.md
hanzo-ml-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
hanzo-ml-nn/src/: activation.rs  batch_norm.rs  conv.rs  embedding.rs  encoding.rs  func.rs  group_norm.rs  init.rs  kv_cache.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  ops.rs  optim.rs  rnn.rs  rotary_emb.rs  sampling.rs  sequential.rs  var_builder.rs  var_map.rs
hanzo-ml-nn/tests/: batch_norm.rs  group_norm.rs  kv_cache.rs  layer_norm.rs  loss.rs  one_hot.rs  ops.rs  optim.rs  rnn.rs  sdpa.rs
hanzo-ml-onnx/: Cargo.toml  README.md
hanzo-ml-onnx/src/: eval.rs  lib.rs
hanzo-ml-onnx/tests/: ops.rs
hanzo-ml-pyo3/: Cargo.toml  README.md  e5.py  pyproject.toml  stub.py
hanzo-ml-pyo3/_additional_typing/: README.md  __init__.py
hanzo-ml-pyo3/src/: lib.rs  onnx.rs  shape.rs  utils.rs
hanzo-ml-transformers/: Cargo.toml  README.md
hanzo-ml-transformers/src/: quantized_nn.rs  quantized_var_builder.rs  utils.rs
hanzo-ml-transformers/tests/: generation_tests.rs  nms_tests.rs
hanzo-ml-wasm-examples/llama2-c/: Cargo.toml  README.md  index.html  lib-example.html
hanzo-ml-wasm-examples/segment-anything/: Cargo.toml  lib-example.html  samWorker.js
hanzo-ml-wasm-tests/: Cargo.toml
hanzo-ml-wasm-tests/tests/: quantized_tests.rs
hanzo-ml/benches/: bench_main.rs
hanzo-ml/examples/: basics.rs  cuda_basics.rs  cuda_sum_benchmark.rs  metal_basics.rs
hanzo-ml/src/: backprop.rs  compute.rs  conv.rs  coopmat_hunt.rs  custom_op.rs  device.rs  display.rs  dummy_vulkan_backend.rs  dummy_wgpu_backend.rs  error.rs  fattn_decode.rs  hc_sinkhorn.rs  indexer.rs  lib.rs  lux_accel_backend.rs  mesh_intelligence.rs  op.rs  safetensors.rs  sort.rs  storage.rs  tensor.rs  tensor_cat.rs  vulkan_backend.rs  wgpu_backend.rs
hanzo-ml/tests/: bilinear_tests.rs  conv_tests.rs  cuda_iquant_bench.rs  cuda_iquant_tests.rs  custom_op_tests.rs  display_tests.rs  expert_stream_tests.rs  gguf_i32_skip_test.rs  gguf_mmap_test.rs  gguf_tests.rs  grad_tests.rs  layout_tests.rs  matmul_tests.rs  metal_concurrent_tests.rs  metal_copy3d_tests.rs  metal_iquant_tests.rs  metal_prefill_perf.rs  metal_ring_moe_combine.rs  moe_route_lastrow.rs  pool_tests.rs  pth_tests.rs  qmmq_numeric.rs  quantized_tests.rs  serialization_tests.rs  spark_bench.rs  tensor_tests.rs  test.npz  vulkan_prefill_bench.rs  vulkan_prefill_lastrow.rs  vulkan_quant_tests.rs  wgpu_quant_tests.rs
hanzo-nn/: Cargo.toml  README.md
hanzo-nn/benches/: bench_main.rs
hanzo-nn/examples/: cpu_benchmarks.rs
hanzo-nn/src/: activation.rs  conv.rs  cpu_flash_attention.rs  embedding.rs  encoding.rs  group_norm.rs  kv_cache.rs  layer_norm.rs  lib.rs  linear.rs  moe.rs  ops.rs  optim.rs  rnn.rs  rotary_emb.rs  sequential.rs  sigreg.rs  sigreg_fixture.rs  var_builder.rs  var_map.rs
hanzo-nn/tests/: cpu_flash_attn.rs  group_norm.rs  layer_norm.rs  one_hot.rs  ops.rs  optim.rs  rnn.rs  sdpa.rs  varlen_flash_attention.rs
hanzo-onnx/: Cargo.toml  README.md
hanzo-onnx/src/: eval.rs  lib.rs
hanzo-onnx/tests/: ops.rs
hanzo-research/: Cargo.toml
hanzo-research/examples/: kernel_perf.rs
hanzo-research/src/: lib.rs  provenance.rs
hanzo-research/tests/: wire.rs
hanzo-rocm-kernels/: Cargo.toml  README.md
hanzo-rocm-kernels/bench/: .gitignore  README.md  qmmq_ab_decode.hip  qmmq_bench.hip  qmmq_bench_kernels.hip  qmmq_oracle.hip  qmmq_prof.hip  qmmq_wmma_peak.hip  run.sh
hanzo-rocm-kernels/src/: compile.rs  kernel.rs  lib.rs  ops.rs
hanzo-rocm-kernels/tests/: flash_attn.rs
hanzo-train/: Cargo.toml
hanzo-train/src/: cache.rs  lib.rs  main.rs  model.rs
hanzo-training/: Cargo.toml  README.md
hanzo-training/configs/: llama3-8b.yaml  zen-agentic-qwen4b.yaml  zen-identity.yaml
hanzo-training/examples/: train_llama.rs  train_qwen.rs
hanzo-transformers/: Cargo.toml
tensor-tools/: Cargo.toml
(+1501 files in other folders)
