[workspace]
members = [
    "hanzo-ml",
    "hanzo-datasets", 
    "hanzo-ml-examples",
    "hanzo-nn",
    "hanzo-ml-pyo3",
    "hanzo-transformers",
    "hanzo-training",
    "hanzo-ml-wasm-examples/*",
    "hanzo-ml-wasm-tests",
    "hanzo-ug",
    "tensor-tools",
]
exclude = [
    "hanzo-ml-book",
    "hanzo-flash-attn",
    "hanzo-kernels", 
    "hanzo-metal-kernels",
    "hanzo-onnx",
]
resolver = "2"

[workspace.package]
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"

[workspace.dependencies]
ab_glyph = "0.2.23"
accelerate-src = { version = "0.3.2" }
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
hanzo-ml = { path = "./hanzo-ml", package = "hanzo-ml", version = "0.9.2-alpha.2" }
hanzo-datasets = { path = "./hanzo-datasets", version = "0.9.2-alpha.2" }
hanzo-flash-attn = { path = "./hanzo-flash-attn", version = "0.9.2-alpha.2" }
hanzo-kernels = { path = "./hanzo-kernels", version = "0.9.2-alpha.2" }
hanzo-metal-kernels = { path = "./hanzo-metal-kernels", version = "0.9.2-alpha.2" }
hanzo-nn = { path = "./hanzo-nn", version = "0.9.2-alpha.2" }
hanzo-onnx = { path = "./hanzo-onnx", version = "0.9.2-alpha.2" }
hanzo-transformers = { path = "./hanzo-transformers", version = "0.9.2-alpha.2" }
hanzo-ug = { path = "./hanzo-ug", version = "0.9.2-alpha.2" }
clap = { version = "4.2.4", features = ["derive"] }
criterion = { version = "0.7.0", default-features = false }
cudarc = { version = "0.18.2", features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
    "cuda-version-from-build-system",
    "dynamic-linking",
], default-features = false }
fancy-regex = "0.13.0"
gemm = { version = "0.18.2", features = ["wasm-simd128-enable"] }
hf-hub = "0.4.1"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
float8 = { version = "0.5.0", features = ["num-traits", "rand_distr"] }
hound = "3.5.1"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.24.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.147" }
libm = { version = "0.2.15" }
log = "0.4"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
parquet = { version = "51.0.0" }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.7.0"
safetensors = "0.6.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.21.0", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
ug = "0.5.0"
ug-cuda = "0.5.0"
ug-metal = "0.5.0"
yoke = { version = "0.7.2", features = ["derive"] }
zip = { version = "1.1.1", default-features = false }
objc2-metal = { version = "0.3.1" }
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.1" }

[profile.release-with-debug]
inherits = "release"
debug = true
chrono = "0.4"
