# Standalone crate root. Like `hanzo-flash-attn`, this build helper lives next
# to the main workspace but is intentionally NOT a member of it (the parent
# workspace excludes the CUDA-only flash-attn crates). The empty `[workspace]`
# table makes Cargo treat this manifest as its own root so it can be consumed as
# a path build-dependency without being pulled into the parent workspace.
[workspace]

[package]
name = "hanzo-flash-attn-build"
version = "0.9.2"
edition = "2021"
description = "Build-time helper that fetches and resolves the pinned NVIDIA CUTLASS include directory for the hanzo flash-attention CUDA kernels."
repository = "https://github.com/hanzoai/ml"
keywords = ["cuda", "cutlass", "flash-attention", "build"]
categories = ["development-tools::build-utils"]
license = "BSD-3-Clause OR Apache-2.0"

[lib]
name = "hanzo_flash_attn_build"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
ureq = { version = "2.12", features = ["tls", "gzip"] }
flate2 = "1.0"
tar = "0.4"
