[package]
name = "hanzo-flash-attn-v3"
version = "0.11.8"
edition = "2021"

description = "FlashAttention-3 (Hopper/sm90) layer for the Hanzo ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"
exclude = ["cutlass/docs/**", "cutlass/test/**", "cutlass/examples/**", "cutlass/tools/**", "cutlass/media/**"]

[dependencies]
hanzo-ml = { path = "../hanzo-ml", features = ["cuda"], package = "hanzo-ml", version = "0.11.8" }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
cudaforge = "0.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
hanzo-nn = { path = "../hanzo-nn", features = ["cuda"] }
rstest = "0.23"
