[package]
name = "hanzo-flash-attn-v3"
version = "0.11.9"
edition = "2021"

description = "FlashAttention-3 (Hopper sm_90a) attention kernels for the Hanzo ML stack — arch-gated behind the `cuda` feature; a no-op stub on every other target."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"

[features]
default = []
# Compiles the FA3 Hopper kernels (for `sm_90a`) and enables the CUDA-backed
# attention entry points. OFF by default: without it `build.rs` does nothing and
# the crate is a pure-Rust stub, so ROCm / Metal / Vulkan / CPU / non-Hopper CUDA
# builds are unaffected.
cuda = ["dep:half", "hanzo-ml/cuda"]

[dependencies]
hanzo-ml = { workspace = true }
half = { workspace = true, optional = true }

[build-dependencies]
anyhow = { workspace = true }
rayon = { workspace = true }
hanzo-flash-attn-build = { path = "../hanzo-flash-attn-build", version = "0.11.8" }

[dev-dependencies]
anyhow = { workspace = true }
rstest = "0.23"
