[package]
name = "hanzo-flash-attn"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"

[dependencies]
hanzo-ml = { path = "../hanzo-ml", features = ["cuda"], package = "hanzo-ml", version = "0.9.2-alpha.2" }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
bindgen_cuda = "0.1.5"
anyhow = { version = "1", features = ["backtrace"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
hanzo-nn = { path = "../hanzo-nn", features = ["cuda"] }

[features]
default = []
cudnn = ["hanzo-ml/cudnn"]
