[package]
name = "hanzo-kernels"
version = "0.11.35"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"

[dependencies]

[build-dependencies]
bindgen_cuda = { package = "hanzo-bindgen-cuda", version = "0.1.7" }
glob = "0.3"
