[package]
name = "hanzo-metal-kernels"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics", 
    "rand_distr",
] }
once_cell = "1.21"
thiserror = "2"
tracing = { workspace = true }
objc2-metal = "0.3.2"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[dev-dependencies]
clap = { version = "4.5.49", features = ["derive"] }
half = { version = "2.7.1", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
anyhow = "1"
rand = "0.9.2"
rand_distr = "0.5.1"
