[package]
name = "hanzo-metal-kernels"
version = "0.11.41"
edition = "2021"
description = "Multi-backend tensor & ML framework for Rust — part of the Hanzo ML stack."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"


[dependencies]
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
once_cell = "1.21"
thiserror = "2"
tracing = "0.1.41"
objc2-metal = { version = "0.3.2", features = ["block2"] }
block2 = { version = ">=0.6.1, <0.8.0", features = ["alloc"], default-features = false }
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[dev-dependencies]
clap = { version = "4.5.49", features = ["derive"] }
half = { version = "2.7.1", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
anyhow = "1"
rand = "0.9.2"
rand_distr = "0.5.1"

[profile.profiling]
inherits = "release"
debug = 2
