[package]
name = "hanzo-ml-examples"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
hanzo-ml = { workspace = true }
hanzo-datasets = { workspace = true, optional = true }
hanzo-nn = { workspace = true }
hanzo-transformers = { workspace = true }
hanzo-flash-attn = { workspace = true, optional = true }
hanzo-onnx = { workspace = true, optional = true }

chrono = "0.4"
csv = "1.3.0"
cudarc = { workspace = true, optional = true }
half = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["tokio"] }
image = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
minijinja = { version = "2", features = ["loader"] }
palette = { version = "0.7.6", optional = true }
enterpolation = { version = "0.2.1", optional = true}
pyo3 = { version = "0.27", features = ["auto-initialize", "abi3-py311"], optional = true }
rayon = { workspace = true }
rubato = { version = "0.15.0", optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { version = "0.5.3", features = ["all"], optional = true }
tokenizers = { workspace = true, features = ["onig"] }
cpal = { version = "0.15.2", optional = true }
pdf2image = { version = "0.1.2" , optional = true}
tekken-rs = { version = "0.1.1", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
imageproc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
ab_glyph = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
# Necessary to disambiguate with tokio in wasm examples which are 1.28.1
tokio = "1.48.0"

[build-dependencies]
anyhow = { workspace = true }
bindgen_cuda = { version = "0.1.5", optional = true }
hf-hub = { workspace = true, features = ["tokio"] }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "hanzo-ml/accelerate",
    "hanzo-nn/accelerate",
    "hanzo-transformers/accelerate",
]
cuda = [
    "hanzo-ml/cuda",
    "hanzo-nn/cuda",
    "hanzo-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["hanzo-ml/cudnn", "hanzo-nn/cudnn", "hanzo-transformers/cudnn"]
flash-attn = ["cuda", "hanzo-transformers/flash-attn", "dep:hanzo-flash-attn"]
mkl = [
    "dep:intel-mkl-src",
    "hanzo-ml/mkl",
    "hanzo-nn/mkl", 
    "hanzo-transformers/mkl",
]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
onnx = ["hanzo-onnx"]
metal = ["hanzo-ml/metal", "hanzo-nn/metal"]
microphone = ["cpal", "rubato"]
encodec = ["cpal", "symphonia", "rubato"]
mimi = ["cpal", "symphonia", "rubato"]
snac = ["cpal", "symphonia", "rubato"]
depth_anything_v2 = ["palette", "enterpolation"]
tekken = ["tekken-rs"]
buildtime-download = []

[[example]]
name = "llama_multiprocess"
required-features = ["cuda", "nccl", "flash-attn"]

[[example]]
name = "reinforcement-learning"
required-features = ["pyo3"]

[[example]]
name = "onnx"
required-features = ["onnx"]

[[example]]
name = "onnx-llm"
required-features = ["onnx"]

[[example]]
name = "onnx_basics"
required-features = ["onnx"]

[[example]]
name = "whisper"
required-features = ["symphonia"]

[[example]]
name = "whisper-microphone"
required-features = ["microphone"]

[[example]]
name = "mnist-training"
required-features = ["hanzo-datasets"]

[[example]]
name = "llama2-c"
required-features = ["hanzo-datasets"]

[[example]]
name = "mimi"
required-features = ["mimi"]

[[example]]
name = "snac"
required-features = ["snac"]

[[example]]
name = "encodec"
required-features = ["encodec"]

[[example]]
name = "depth_anything_v2"
required-features = ["depth_anything_v2"]

[[example]]
name = "silero-vad"
required-features = ["onnx"]

[[example]]
name = "colpali"
required-features = ["pdf2image"]
