# Hanzo ML Inference Layer
# This crate provides high-level inference capabilities for hanzo-engine

[package]
name = "hanzo-ml-inference"
version = "0.1.0"
edition = "2021"
description = "High-level inference layer for Hanzo ML"
repository = "https://github.com/hanzoai/ml"
license = "MIT OR Apache-2.0"

[dependencies]
hanzo-ml = { path = "../hanzo-ml", version = "0.9.1" }
hanzo-ml-nn = { path = "../hanzo-ml-nn", version = "0.9.1" }
hanzo-ml-transformers = { path = "../hanzo-ml-transformers", version = "0.9.1" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["metal"]
metal = ["hanzo-ml/metal", "hanzo-ml-nn/metal"]
cuda = ["hanzo-ml/cuda"]
mkl = ["hanzo-ml/mkl"]
accelerate = ["hanzo-ml/accelerate"]