[package]
name = "hanzo-ml-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
hanzo-ml = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
metal = { workspace = true, optional = true }
hanzo-ml-metal-kernels = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo/accelerate"]
cuda = ["hanzo/cuda"]
cudnn = ["hanzo/cudnn"]
mkl = ["dep:intel-mkl-src", "hanzo/mkl"]
metal = ["hanzo/metal", "dep:hanzo-ml-metal-kernels", "dep:metal"]

[[bench]]
name = "bench_main"
harness = false
