[package]
name = "hanzo-ml-onnx"
version = "0.9.1"
edition = "2021"

description = "ONNX support for ML"
repository = "https://github.com/huggingface/hanzo"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
hanzo = { path = "../hanzo-ml-core", package = "hanzo-ml-core", version = "0.9.1" }
hanzo-ml-nn = { path = "../hanzo-ml-nn", version = "0.9.1" }
prost = "0.12.1"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
