[package]
name = "hanzo-ml-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "hanzo"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
hanzo-ml = { workspace = true }
hanzo-ml-nn = { workspace = true }
hanzo-ml-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py311"] }

[build-dependencies]
pyo3-build-config = "0.22"

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo-ml/accelerate"]
cuda = ["hanzo-ml/cuda"]
mkl = ["dep:intel-mkl-src","hanzo-ml/mkl"]
onnx = ["dep:hanzo-ml-onnx"]

