[package]
name = "hanzo-ml-pyo3"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "hanzo"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
hanzo-ml = { workspace = true }
hanzo-nn = { workspace = true }
hanzo-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py313"] }
float8 = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.27"

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo-ml/accelerate"]
cuda = ["hanzo-ml/cuda"]
mkl = ["dep:intel-mkl-src", "hanzo-ml/mkl"]
onnx = ["dep:hanzo-onnx"]

