[package]
name = "hanzo-ml-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
hanzo = { workspace = true }
hanzo-ml-flash-attn = { workspace = true, optional = true }
hanzo-ml-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo/accelerate", "hanzo-ml-nn/accelerate"]
cuda = ["hanzo/cuda", "hanzo-ml-nn/cuda"]
cudnn = ["hanzo/cudnn", "hanzo-ml-nn/cudnn"]
flash-attn = ["cuda", "dep:hanzo-ml-flash-attn"]
mkl = ["dep:intel-mkl-src", "hanzo/mkl", "hanzo-ml-nn/mkl"]
metal = ["hanzo/metal", "hanzo-ml-nn/metal"]
