[package]
name = "hanzo-ml-wasm-tests"
version = "0.11.0"
edition = "2021"
description = "WASM tests for hanzo"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]

[dependencies]
hanzo-ml = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.3", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
